--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,6 +28,7 @@ textarea {
     margin-left: 10%;
     width: 20%;
     max-height: 50%;
+    overflow-y: auto;
 }
 
 .priorityRed>h1 {
@@ -40,6 +41,7 @@ textarea {
     margin-left: 40%;
     width: 20%;
     max-height: 50%;
+    overflow-y: auto;
 }
 
 .priorityYellow>h1 {
@@ -52,6 +54,7 @@ textarea {
     margin-left: 70%;
     width: 20%;
     max-height: 50%;
+    overflow-y: auto;
 }
 
 .priorityGreen>h1 {
@@ -62,7 +65,7 @@ textarea {
     position: fixed;
     background-color: aqua;
     margin-left: 10%;
-    margin-top: 30%;
+    margin-top: 40%;
     width: 80%;
     max-height: 20%;
     overflow-y: auto;
